project tags bug fix
Fixed a bug in project tags where the tags would get distorted on small mobile device. Now they are wrapped in a bootstrap row and are responsive now.

--- a/staticfiles/styles/style.css
+++ b/staticfiles/styles/style.css
@@ -103,16 +103,15 @@ body {
 
 .tag-pill h6{
   text-align: center;
-  padding: 0px 5px;
-  font-size: 14px;
+  font-size: 12px;
   color: rgb(105, 89, 89);
 }
 
 .tag-pill{
   background-color: white;
+  width: 4em;
   border-radius: 15px;
-  padding: 0 5px;
-  height: 18px;
+  height: 15px;
   text-align: center;
   box-shadow: 1px 2px 5px 0px rgba(20, 19, 61, 0.2);
 }
@@ -404,10 +403,6 @@ body {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   object-fit: cover;
-}
-
-.project-tags{
-  display: inline-flex;
 }
 /* PROJECTS STYLING END */
 
